tests/rosetta/out/Swift/csv-to-html-translation-5.error
run error: exit status 1
/tmp/TestMochiToSwiftcsv-to-html-translation-51892770865/001/main.swift:42:24: error: cannot assign value of type '[Any]' to type '[[String]]'
40 | }
41 | let c = "Character,Speech\n" + "The multitude,The messiah! Show us the messiah!\n" + "Brians mother,<angry>Now you listen here! He's not the messiah; he's a very naughty boy! Now go away!</angry>\n" + "The multitude,Who are you?\n" + "Brians mother,I'm his mother; that's who!\n" + "The multitude,Behold his mother! Behold his mother!"
42 | var rows: [[String]] = [Any]()
   |                        |- error: cannot assign value of type '[Any]' to type '[[String]]'
   |                        `- note: arguments to generic parameter 'Element' ('Any' and '[String]') are expected to be equal
43 | for line in split(c, "\n") {
44 |     rows = rows + [split(line, ",")]

/tmp/TestMochiToSwiftcsv-to-html-translation-51892770865/001/main.swift:3:25: error: cannot assign value of type '[Any]' to type '[String]'
 1 | // Generated by Mochi compiler v0.10.26 on 2025-07-16T09:57:48Z
 2 | func split(_ s: String, _ sep: String) -> [String] {
 3 |     var out: [String] = [Any]()
   |                         |- error: cannot assign value of type '[Any]' to type '[String]'
   |                         `- note: arguments to generic parameter 'Element' ('Any' and 'String') are expected to be equal
 4 |     var start = 0
 5 |     var i = 0
