tests/rosetta/out/Swift/csv-to-html-translation-5.swift
// Generated by Mochi compiler v0.10.26 on 2025-07-16T09:57:48Z
func split(_ s: String, _ sep: String) -> [String] {
    var out: [String] = [Any]()
    var start = 0
    var i = 0
    let n = sep.count
    while i <= s.count - n {
        if String(s[s.index(s.startIndex, offsetBy: i)..<s.index(s.startIndex, offsetBy: i + n)]) == sep {
            out = out + [String(s[s.index(s.startIndex, offsetBy: start)..<s.index(s.startIndex, offsetBy: i)])]
            i = i + n
            start = i
        }
        else {
            i = i + 1
        }
    }
    out = out + [String(s[s.index(s.startIndex, offsetBy: start)..<s.index(s.startIndex, offsetBy: s.count)])]
    return out
}
func htmlEscape(_ s: String) -> String {
    var out = ""
    var i = 0
    while i < s.count {
        let ch = String(s[s.index(s.startIndex, offsetBy: i)..<s.index(s.startIndex, offsetBy: i + 1)])
        if ch == "&" {
            out = out + "&amp;"
        }
        else         if ch == "<" {
            out = out + "&lt;"
        }
        else         if ch == ">" {
            out = out + "&gt;"
        }
        else {
            out = out + ch
        }
        i = i + 1
    }
    return out
}
let c = "Character,Speech\n" + "The multitude,The messiah! Show us the messiah!\n" + "Brians mother,<angry>Now you listen here! He's not the messiah; he's a very naughty boy! Now go away!</angry>\n" + "The multitude,Who are you?\n" + "Brians mother,I'm his mother; that's who!\n" + "The multitude,Behold his mother! Behold his mother!"
var rows: [[String]] = [Any]()
for line in split(c, "\n") {
    rows = rows + [split(line, ",")]
}
print("<table>")
for row in rows {
    var cells = ""
    for cell in row {
        cells = cells + "<td>" + htmlEscape(cell) + "</td>"
    }
    print("    <tr>" + cells + "</tr>")
}
print("</table>")
